[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Enemy_Rolly.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy_Rolly.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.1081, 2.14905 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 10 )

[node name="Enemy_Rolly" type="KinematicBody2D"]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="floor_hitbox" type="CollisionShape2D" parent="."]
modulate = Color( 0.184314, 0.388235, 1, 1 )
position = Vector2( 0.891907, 14.149 )
shape = SubResource( 1 )

[node name="floor_checker" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="DeathTimer" type="Timer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
